rely more on Tachyons instead of our css and fix an issue regarding tags display on small devices

--- a/themes/anodyne/source/css/partial/_base.styl
+++ b/themes/anodyne/source/css/partial/_base.styl
@@ -1,21 +1,6 @@
-body
-  font-family $main-font
-
-.vh-40
-  height 40vh
-
 .bg-1
   background $gradient-color-1
   background linear-gradient(to right, $gradient-color-1 0%, $gradient-color-2 100%)
-
-.pab-100px
-  padding-bottom 100px
-
-.w8
-  width 64rem
-
-.tj
-  text-align justify
 
 .header-icon
   font-size 8em
@@ -27,9 +12,6 @@ body
 .text-main-color
   color $main-color
 
-.border-color
-  border-color white
-
 .hover-border-main-color
   transition all 0.3s cubic-bezier(.25,.8,.25,1)
   &:hover
@@ -40,6 +22,5 @@ body
   &:hover
     color $main-color
 
-.cursor-default {
-  cursor: default;
-}
+.cursor-default
+  cursor default
